--- a/src/public/styles/style.css
+++ b/src/public/styles/style.css
@@ -16,13 +16,13 @@ body {
     overflow: hidden;
     flex-direction: column;
     background-color: white;
-    z-index: 1000;
     opacity: 0;
     /* transform: translateX(100%); */
     visibility: hidden;
     /* transition: opacity 0.1s ease, transform 0.1s ease; */
     transition: opacity 0.2s ease, visibility 0s 0.3s;
     display: flex;
+    z-index: 1001;
 }
 
 .chat-widget.open {
@@ -37,21 +37,18 @@ body {
     background-color: #ffffff;
     color: #0078ff;
     padding: 0.5rem;
-    ;
     display: inline;
     justify-content: space-between;
     align-items: center;
     cursor: pointer;
     font-size: 1.125rem;
-    /* 18px */
-    min-height: 9vh;
     z-index: 2;
     box-shadow: 0px 2px 6px rgba(0, 0, 0, .1);
 }
 
 .chat-header img {
     height: 8vh;
-    width: 4vw;
+    width: 11vh;
 }
 
 .chat-header span {
@@ -275,10 +272,9 @@ a.suggestive-prompt {
 }
 
 /* Mobile */
-@media (max-width: 767px) {
+@media (max-width: 767px)  {
     .chat-header {
         padding: 0.4rem;
-        min-height: 13vw;
     }
 
     .chat-header img {
@@ -288,10 +284,10 @@ a.suggestive-prompt {
 
     .chat-widget {
         max-width: 86vw;
-        max-height: 140vw;
-        height: 100%;
-        bottom: 24vw;
-        right: 7vw;
+        height: 80%;
+        max-height: 65vh;
+        bottom: 6rem;
+        right: 7%;
     }
 
     .chat-footer {
@@ -321,16 +317,16 @@ a.suggestive-prompt {
     }
 
     #chatButton {
-        bottom: 5vw;
-        right: 6vw;
+        bottom: 3%;
+        right: 6%;
+    
     }
 }
 
 /* Tablet */
-@media (min-width: 768px) and (max-width: 991px) {
+@media (min-width: 768px) and (max-width: 1024px) {
     .chat-header {
         padding: 0.3em;
-        min-height: 10vw;
     }
 
     .chat-header img {
@@ -340,10 +336,10 @@ a.suggestive-prompt {
 
     .chat-widget {
         max-width: 70vw;
-        max-height: 75vh;
-        height: 100%;
-        bottom: 15vw;
-        right: 4vw;
+        height: 80%;
+        max-height: 65vh;
+        bottom: 6rem;
+        right: 3%;
     }
 
     .chat-footer textarea {
@@ -359,8 +355,8 @@ a.suggestive-prompt {
     }
 
     #chatButton {
-        bottom: 5vw;
-        right: 5vw;
+        bottom: 2%;
+        right: 3%;
     }
 }
 
